--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "npm run buildServer && node dist/index.js",
     "build": "webpack --watch",
-    "cleanUp": "npx prettier --write .",
+    "cleanup": "npx prettier --write .",
     "dev": "nodemon --exec babel-node server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "buildServer": "babel server/index.js -d dist"
@@ -34,9 +34,20 @@
     "webpack-cli": "^4.7.2"
   },
   "dependencies": {
+    "css-loader": "^5.2.6",
     "express": "^4.17.1",
+    "file": "^0.2.2",
+    "file-loader": "^6.2.0",
+    "fs": "0.0.1-security",
+    "html-loader": "^2.1.2",
+    "install": "^0.13.0",
+    "jquery": "^3.6.0",
+    "npm": "^7.17.0",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
-    "sass": "^1.34.1"
+    "sass": "^1.34.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^2.0.0"
   }
 }
